fix menu flickering

--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ ul {
 
 #canvas {
     position: absolute;
-    display: flex;
+    display: none;
     top: 0px;
     left: 0px;
     width: 100vw;
@@ -49,7 +49,7 @@ ul {
 
 .menu {
     position: absolute;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 8px;
     align-items: center;
